<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-apps-fuse</artifactId>
  <version>0.1.9</version>
  <packaging>pom</packaging>

  <modules>
    <module>vavi-nio-file-googledrive</module>
    <module>vavi-nio-file-amazondrive</module>
    <module>vavi-nio-file-flickr</module>
    <module>vavi-nio-file-archive</module>
    <module>vavi-nio-file-gathered</module>
    <module>vavi-nio-file-hfs</module>
    <module>vavi-nio-file-onedrive</module>
    <module>vavi-nio-file-onedrive3</module>
    <module>vavi-nio-file-onedrive4</module>
    <module>vavi-nio-file-vfs</module>
    <module>vavi-nio-file-sandbox</module>
  </modules>

  <properties>
    <vavi-net-auth.groupId>com.github.umjammer.vavi-net-auth</vavi-net-auth.groupId> <!-- vavi / com.github.umjammer -->
    <vavi-net-auth.version>0.1.9</vavi-net-auth.version>

    <vavi-nio-file-base.groupId>com.github.umjammer</vavi-nio-file-base.groupId> <!-- com.github.fge / com.github.umjammer -->
    <vavi-nio-file-base.version>0.0.14v</vavi-nio-file-base.version>

    <vavi-nio-file-fuse.groupId>com.github.umjammer</vavi-nio-file-fuse.groupId> <!-- vavi / com.github.umjammer -->
    <vavi-nio-file-fuse.version>0.0.16</vavi-nio-file-fuse.version>
  </properties>

  <name>vavi-apps-fuse</name>
  <url>https://github.com/umjammer/vavi-apps-fuse</url>
  <description>fuse for java and many file systems.</description>
  <scm>
    <url>https://github.com/umjammer/vavi-apps-fuse</url>
  </scm>
  <issueManagement>
    <url>https://github.com/umjammer/vavi-apps-fuse/issues</url>
  </issueManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <release>17</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.2</version>
          <configuration>
            <argLine>-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties</argLine>
            <trimStackTrace>false</trimStackTrace>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <!-- java-fs base -->
        <groupId>${vavi-nio-file-base.groupId}</groupId>
        <artifactId>vavi-nio-file-base</artifactId>
        <version>${vavi-nio-file-base.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.2</version>
      </dependency>

      <dependency>
        <groupId>vavi</groupId>
        <artifactId>vavi-net-fuse</artifactId>
        <version>0.1.9</version>
      </dependency>

      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>${vavi-nio-file-base.groupId}</groupId>
        <artifactId>vavi-nio-file-base</artifactId>
        <version>${vavi-nio-file-base.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.rainerhahnekamp</groupId>
        <artifactId>sneakythrow</artifactId>
        <version>1.2.0</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>${vavi-nio-file-fuse.groupId}</groupId>
        <artifactId>vavi-nio-file-fuse</artifactId>
        <version>${vavi-nio-file-fuse.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>${vavi-nio-file-fuse.groupId}</groupId>
        <artifactId>vavi-nio-file-fuse</artifactId>
        <version>${vavi-nio-file-fuse.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
